feat(threads): Adopt Java Virtual Threads for management endpoints and Spring components (#433)
* feat(threads): Adopt Java Virtual Threads for management endpoints and Spring components

Resolves #432.
- Configured spring.threads.virtual.enabled=true in application.properties.
- Migrated ManagementServer to Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("management-http-", 0).factory()).

Assisted-by: Antigravity:gemini-3.6-flash
Signed-off-by: Ronny Trommer <ronny@no42.org>

* fix(management): bound probe concurrency and pin the threading contract

Applied from code review of #433.

The virtual-thread swap removed the fixed pool of 2 without putting a ceiling in
its place, on a port that binds all interfaces by default. A thread-per-task
executor has no bound of its own, so anything able to reach 8080 could make the
collector hold one virtual thread, one exchange and one socket per concurrent
request. riptide.management.max-concurrent-requests (default 32) now caps it and
sheds beyond that with 503 rather than queueing, mirroring what McpSseServer
already does for its sessions.

Nothing could detect the change: the suite issued three sequential requests and
asserted status codes, so it passed byte-identically whether the handlers ran on
virtual threads or the platform pool they replaced. Two tests now pin the
contract — handlers run on virtual threads named management-http-*, and requests
beyond the cap are shed. The HTTP client gained a timeout so a missing cap fails
fast instead of hanging the suite.

spring.threads.virtual.enabled has no consumer today (no @Async, @Scheduled,
TaskExecutor or TaskScheduler anywhere in src/main, and no servlet container
under web-application-type=none), so it changes nothing yet. Its first effect
would be to hand out an unbounded SimpleAsyncTaskExecutor and silently void
every spring.task.*.pool.* setting, so the two simple-executor ceilings are set
now and the line carries the rationale the rest of the file's blocks 